--- a/navbar.css
+++ b/navbar.css
@@ -9,7 +9,7 @@
 .navbar-nav .nav-item .nav-link {
     font-weight: 500;
     font-size: 17px;
-    color: rgb(61, 59, 59) !important;
+    color: #4C4C4C !important;
 }
 
 .nav-link::after {
