--- a/shop.css
+++ b/shop.css
@@ -33,3 +33,10 @@
     border: 1px solid #fff;
     border: 2px solid red;
 }
+
+.tea-product {
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+    border-radius: 5px;
+    margin-top: 1rem;
+    width: 19rem;
+}
