--- a/shop.css
+++ b/shop.css
@@ -20,7 +20,7 @@
 }
 
 .shop-btn {
-    background-color: #B8C499;
+    background-color: #7d8961;
     color: #fff;
     overflow: hidden;
     display: inline-block;
@@ -31,17 +31,58 @@
     padding: 15px 30px;
     font-size: 15px;
     border: 1px solid #fff;
-    border: 2px solid red;
 }
 
 .tea-product {
     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
     border-radius: 5px;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     width: 19rem;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .tea-product h5 {
     text-transform: capitalize;
     /* color: red; */
+}
+
+.row .text-center {
+    display: flex;
+    justify-content: center;
+}
+
+.tea-product .discount-label {
+    width: 200px;
+    position: absolute;
+    top: 18px;
+    right: -68px;
+    transform: rotate(45deg);
+    z-index: 1;
+    font-size: 14px;
+    padding: 1px 0 3px 0;
+    background: #41b7bb;
+    color: #fff;
+    text-align: center;
+    align-items: center;
+}
+
+.tea-product:hover {
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 15px;
+}
+
+.tea-product img {
+    transition: transform 0.3s ease;
+}
+
+.tea-product:hover img {
+    transform: scale(1.05);
+}
+
+.prize {
+    display: block;
+    color: #36392e;
+    font-size: 1.2rem;
 }
