--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
 }
 
 nav .btn-theme {
-    background-color: #C3A14C;
+    /* background-color: #C3A14C; */
 }
 
 @media (max-width:767px) {
