--- a/shop.css
+++ b/shop.css
@@ -3,6 +3,12 @@
     filter: drop-shadow(0px 12px 5px);
 }
 
+.products-sec p {
+    font-size: 18px;
+    color: black;
+    text-align: justify
+}
+
 .breadcrumb {
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .6)), url(images/about1.png);
     background-size: cover;
@@ -77,7 +83,8 @@
 }
 
 .tea-product:hover img {
-    transform: rotate(1);
+    transform: scale(1.1);
+    /* Zoom effect */
 }
 
 .prize {
