--- a/style.css
+++ b/style.css
@@ -159,11 +159,13 @@ body {
 
     /* Top-Btn */
     .top-btn {
-        border: 1px solid black;
         text-transform: uppercase;
         font-size: 8px;
         border-radius: 0;
         transition: 0.3s;
+        max-width: 6rem;
+        padding: 6px;
+        text-align: center;
     }
 
     .about h3 {
